--- a/alghost/4주차-이태화.md
+++ b/alghost/4주차-이태화.md
@@ -14,4 +14,4 @@
   - AWS, GKE와 같은 클라우드 플랫폼 활용
   - 또는 on-premise 환경을 활용
 
-![쿠버네티스 설치 도구 및 서비스와 특징 비교](https://github.com/hydblab/thursday_k8s/blob/main/alghost/assets/img1.jpg?raw=true)
+![쿠버네티스 설치 도구 및 서비스와 특징 비교](./assets/img1.png?raw=true)
