--- a/alghost/4주차-이태화.md
+++ b/alghost/4주차-이태화.md
@@ -1,4 +1,6 @@
-# 쿠버네티스 설치
+# 4주차 이태화 자료
+
+## 5. 쿠버네티스 설치
 
 - 도커 컨테이너, 도커 스웜, 도커 컴포즈와 같은 개념을 한군데로 모아 사용할 수 있는 프로젝트: 쿠버네티스
 - 주의 사항
@@ -6,12 +8,97 @@
   - 따라서 쿠버네티스 자체의 관리가 더욱 어려울 수도 있음.
   - 즉, 조직의 규모에 따라 오버 엔지니어링이 될 수 있으니, 운영/관리의 인력과 비용을 고려하여 도입 필요.
 
-## 5.1 쿠버네티스 설치 환경의 종류
+### 5.1 쿠버네티스 설치 환경의 종류
 
 - 개발 용도: Minikube, Docker Desktop for Mac/Windows에 내장된 쿠버네티스
-  - standalone 모드로 사용하기 때문에 기능을 학습하기에 적합하지 않음.
+  - standalone 모드로 사용하기 때문에 모든 기능을 학습하기에는 어려움
 - 서비스 테스트 또는 운영 용도: kops, kubespray, kubeadm, EKS(AWS), GKE(Google)
   - AWS, GKE와 같은 클라우드 플랫폼 활용
   - 또는 on-premise 환경을 활용
 
 ![쿠버네티스 설치 도구 및 서비스와 특징 비교](./assets/img1.png?raw=true)
+
+### 5.2 쿠버네티스 버전 선택
+
+- 버전이 관계는 없으나, 너무 최신이거나 너무 예전 버전을 사용하지 않으면 좋음
+
+### 5.3 개발 용도의 쿠버네티스 설치
+
+#### 5.3.1 Docker Desktop for Mac / Windows에서 쿠버네티스 사용
+
+- Kubenernetes 탭에서 활성화
+
+![Docker Desktop for Mac에서 쿠버네티스 활성화](./assets/img2.png?raw=true)
+
+#### 5.3.2 Minikube로 쿠버네티스 설치
+
+- 앞서 설명한 대로, 기능을 간단히 사용해볼 수는 있지만, 실제 운영 환경에서는 Minikube를 적용하기 힘듬
+- 가능하다면 여러 대의 서버로 쿠버네티스 클러스터를 구성하는 것이 좋음
+
+##### 기본 설정을 이용해 버추어 박스로 minikube 설치
+
+- 생략
+
+##### 리눅스 서버에서 가상 머신 없이 도커 엔진만으로 minikube 설치
+
+- 참고: <https://minikube.sigs.k8s.io/docs/start/>
+- Minikube 설치 (root 사용자로 실행하기 위해서는 --force를 활성화 해야 함)
+
+```bash
+[root@lahdev ~]# curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
+  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
+                                 Dload  Upload   Total   Spent    Left  Speed
+100 89.3M  100 89.3M    0     0  28.4M      0  0:00:03  0:00:03 --:--:-- 28.4M
+[root@lahdev ~]# sudo install minikube-linux-amd64 /usr/local/bin/minikube
+[root@lahdev ~]# minikube start --force
+* Centos 8.4.2105 의 minikube v1.32.0
+! minikube skips various validations when --force is supplied; this may lead to unexpected behavior
+* 자동적으로 docker 드라이버가 선택되었습니다. 다른 드라이버 목록: ssh, none
+* The "docker" driver should not be used with root privileges. If you wish to continue as root, use --force.
+* If you are running minikube within a VM, consider using --driver=none:
+*   https://minikube.sigs.k8s.io/docs/reference/drivers/none/
+* Using Docker driver with root privileges
+* minikube 클러스터의 minikube 컨트롤 플레인 노드를 시작하는 중
+* 베이스 이미지를 다운받는 중 ...
+* 쿠버네티스 v1.28.3 을 다운로드 중 ...
+    > preloaded-images-k8s-v18-v1...:  403.35 MiB / 403.35 MiB  100.00% 31.03 M
+    > gcr.io/k8s-minikube/kicbase...:  453.90 MiB / 453.90 MiB  100.00% 28.68 M
+...중략
+* 끝났습니다! kubectl이 "minikube" 클러스터와 "default" 네임스페이스를 기본적으로 사용하도록 구성되었습니다.
+```
+
+- kubectl 설치: [Kubectl Installation](https://kubernetes.io/docs/tasks/tools/install-kubectl-linux/)
+- 설치 확인
+
+```bash
+[root@lahdev ~]# kubectl get po -A
+NAMESPACE     NAME                               READY   STATUS    RESTARTS      AGE
+kube-system   coredns-5dd5756b68-wx5pw           1/1     Running   0             48s
+kube-system   etcd-minikube                      1/1     Running   0             61s
+kube-system   kube-apiserver-minikube            1/1     Running   0             61s
+kube-system   kube-controller-manager-minikube   1/1     Running   0             61s
+kube-system   kube-proxy-vr8rj                   1/1     Running   0             48s
+kube-system   kube-scheduler-minikube            1/1     Running   0             61s
+kube-system   storage-provisioner                1/1     Running   1 (18s ago)   59s
+[root@lahdev ~]#
+```
+
+### 5.4 여러 서버로 구성된 쿠버네티스 클러스터 설치
+
+- 실제 설치 과정은 책을 참고 하는 것이 좋을 것 같음
+- 주의 사항과 알아야할 것 들에 대해서만 정리
+
+#### 사전 고려 사항
+
+- 모든 서버의 시간이 NTP를 통해 동기화 되어있는지 확인
+  - 네트워크가 불가능한 상황이라면 클러스터 중 한 노드에 ntp server를 구성하고 동기화하는 것도 방법이 될 것 같음 (주)
+- 모든 서버의 맥(MAC) 주소가 다른지 확인
+- 모든 서버의 하드웨어 스펙 확인: 2GB 메모리, 2 CPU
+- 모든 서버에서 메모리 스왑(Swap)을 비활성화
+  - 당연히 스왑을 꺼놓게 되면 out of memory(OOM Kill)이 발생할 수 있기 때문에 서버를 쿠버네티스 노드 외 용도로 사용하면 안 될 것 같음 (주)
+
+```bash
+[root@lahdev ~]# swapoff -a 
+```
+
+## 6. 쿠버네티스 시작하기
